--- a/代码操作说明+2个案例.md
+++ b/代码操作说明+2个案例.md
@@ -51,7 +51,7 @@
 
 in.txt:
 
-![image-20210429113912749](./typora-user-images/image-20210429113912749.png)
+![image-20210429113912749](./kurotto.assets/image-20210429113912749.png)
 
 
 
