--- a/代码操作说明+2个案例.md
+++ b/代码操作说明+2个案例.md
@@ -51,27 +51,27 @@
 
 in.txt:
 
-![image-20210429113912749](kurotto.assets/image-20210429113912749.png)
+![image-20210429113912749](https://github.com/Ardcy/Kurotto/blob/main/kurotto.assets/image-20210426231029708.png)
 
 
 
 out.cnf:
 
- ![image-20210429113937378](/home/jhto/.config/Typora/typora-user-images/image-20210429113937378.png)
+ ![image-20210429113937378](./kurotto.assets/image-20210426231029708.png)
 
 sat solver 求解：
 
-![image-20210429114201322](/home/jhto/.config/Typora/typora-user-images/image-20210429114201322.png)
+![image-20210429114201322](./kurotto.assets/image-20210429114201322.png)
 
 
 
 out1.txt:
 
-![image-20210429114515815](/home/jhto/.config/Typora/typora-user-images/image-20210429114515815.png)
+![image-20210429114515815](./kurotto.assets/image-20210429114515815.png)
 
 正确答案：
 
-![image-20210429114539429](/home/jhto/.config/Typora/typora-user-images/image-20210429114539429.png)
+![image-20210429114539429](./kurotto.assets/image-20210429114539429.png)
 
 可以发现 我们可以并且找到了 除了标准答案的其它解法！
 
