--- a/代码操作说明+2个案例.md
+++ b/代码操作说明+2个案例.md
@@ -61,7 +61,7 @@ out.cnf:
 
 sat solver 求解：
 
-![image-20210429114201322](./kurotto.assets/image-20210429114201322.png)
+![image-20210429114201322](https://github.com/Ardcy/Kurotto/blob/main/kurotto.assets/image-20210429114201322.png)
 
 
 
@@ -89,28 +89,28 @@ out1.txt:
 
 in.txt
 
-![image-20210429115339742](/home/jhto/.config/Typora/typora-user-images/image-20210429115339742.png)
+![image-20210429115339742](./kurotto.assets/image-20210429115339742.png)
 
 out.cnf
 
-![image-20210429115402924](/home/jhto/.config/Typora/typora-user-images/image-20210429115402924.png)
+![image-20210429115402924](./kurotto.assets/image-20210429115402924.png)
 
 sat solver:
 
-![image-20210429115435885](/home/jhto/.config/Typora/typora-user-images/image-20210429115435885.png)
+![image-20210429115435885](./kurotto.assets/image-20210429115435885.png)
 
 
 
 int1.txt
 
-![image-20210429115507961](/home/jhto/.config/Typora/typora-user-images/image-20210429115507961.png)
+![image-20210429115507961](./kurotto.assets/image-20210429115507961.png)
 
 out1.txt
 
-![image-20210429115529070](/home/jhto/.config/Typora/typora-user-images/image-20210429115529070.png)
+![image-20210429115529070](./kurotto.assets/image-20210429115529070.png)
 
 正确答案：
 
-![image-20210429115550746](/home/jhto/.config/Typora/typora-user-images/image-20210429115550746.png)
+![image-20210429115550746](./kurotto.assets/image-20210429115550746.png)
 
 与 正确答案 完全一样。。
